Added Example Picture

--- a/Stimmzettel/Stimmzettel.csproj
+++ b/Stimmzettel/Stimmzettel.csproj
@@ -115,6 +115,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Content Include="Example.JPG" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
